--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,119 @@
+---
+import "../styles/global.css";
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
+---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="generator" content={Astro.generator} />
+    <title>Blaetterdach</title>
+  </head>
+  <body>
+    <Header />
+    <main>
+      <slot />
+    </main>
+    <Footer />
+  </body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+<style is:global>
+  html,
+  body {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    width: 100%;
+    min-height: 100vh;
+    height: 100%;
+
+    color: #222;
+    background-color: #fdfff5;
+
+    font-size: 16px;
+    font-family: "Encode Sans", serif;
+    letter-spacing: 0.04rem;
+    line-height: 1.8;
+  }
+  main {
+    flex: 1;
+  }
+
+  section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+    padding: 4rem 12rem;
+    box-sizing: border-box;
+
+    & > div {
+      flex: 1;
+    }
+  }
+
+  h1 {
+    font-size: 2rem;
+    font-weight: 600;
+    letter-spacing: 0.04rem;
+    line-height: 1.5;
+  }
+
+  h2 {
+    font-size: 2rem;
+    font-weight: 600;
+    letter-spacing: 0.04rem;
+    line-height: 1.5;
+  }
+
+  button {
+    font-family: "Encode Sans", serif;
+  }
+
+  form {
+    width: 600px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    & > div {
+      display: flex;
+      flex-direction: column;
+
+      & > label {
+        align-self: flex-start;
+        font-size: small;
+      }
+
+      & > input,
+      textarea {
+        border: 1px solid #b1b1b1;
+        border-radius: 8px;
+        padding: 8px 12px;
+      }
+
+      & > textarea {
+        resize: vertical;
+        min-height: 5rem;
+      }
+    }
+
+    & > button {
+      margin-top: 1rem;
+      padding: 8px 12px;
+      font-size: inherit;
+    }
+  }
 </style>
