--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,9 +18,9 @@ import headerLogo from "../assets/logo_header.webp";
           <span>office@blaetterdach.com</span>
         </div>
         <div>
-          <a href="/impressum">Impressum</a>
-          <a href="/agb">AGB</a>
-          <a href="/datenschutzerklaerung">Datenschutzerklärung</a>
+          <a href="/blaetterdach/impressum">Impressum</a>
+          <a href="/blaetterdach/agb">AGB</a>
+          <a href="/blaetterdach/datenschutzerklaerung">Datenschutzerklärung</a>
         </div>
       </div>
     </div>
