--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,14 +5,14 @@ import headerLogo from "../assets/logo_header.webp";
 
 <header>
   <nav>
-    <a href="/" class="logo">
+    <a href="/blaetterdach/" class="logo">
       <Image src={headerLogo} alt="Logo Blätterdach" />
     </a>
-    <a href="/">Start</a>
-    <a href="/leistungen">Leistungen</a>
-    <a href="/unternehmen">Für Unternehmen</a>
-    <a href="/ueber">Über Mich</a>
-    <a href="/agb">Agb</a>
+    <a href="/blaetterdach/">Start</a>
+    <a href="/blaetterdach/leistungen">Leistungen</a>
+    <a href="/blaetterdach/unternehmen">Für Unternehmen</a>
+    <a href="/blaetterdach/ueber">Über Mich</a>
+    <a href="/blaetterdach/agb">Agb</a>
   </nav>
 </header>
 
